Fixed an issue in which View button's img is too large to fit in mobile mode

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -206,8 +206,8 @@ header {
   }
 
   img {
-    width: 325px;
-    height: 325px;
+    width: 300px;
+    height: 300px;
     margin: 1.5rem 0;
     border-radius: 20rem;
     border: 5px solid $primary-color;
